# discord-search

./: .env.example  .gitignore  CLAUDE.example.md  CLAUDE.md  README.md  cloudbuild.yaml  docker-compose.yaml  pyproject.toml
config/: aliases.example.json
docker/: bot.Dockerfile  cron-entrypoint.sh  cron.Dockerfile  jobs.Dockerfile
docs/: index.md  overview.md
docs/api/: commands.md
docs/foundation/: goals.md  persona.md
docs/requirements/: features.md
docs/tech/: data-model.md  directory-structure.md  stack.md
scripts/: check_sync_status.py  index.md  initial_sync.py  reindex.py  setup_gcp.sh
src/: __init__.py
src/bot/: main.py
src/bot/commands/: search.py
src/bot/utils/: __init__.py  embed.py
src/core/: __init__.py  chunker.py  config.py  firestore.py  gemini.py  models.py
src/jobs/: __init__.py  main.py  ocr.py  sync.py
tests/: conftest.py  test_models.py
